# htmx-language-server

./: .gitignore  Cargo.toml  README.md  gen-htmx.sh  ref.html
editors/kak/: kak-lsp.toml  load.kak
src/: doc.rs  element.rs  htmx.rs  main.rs  search.rs  selectors.rs  textstore.rs
test/contact-app/templates/: archive_ui.html  index.html
