[package]
name = "htmx-language-server"
description = "A language server for htmx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.1.25"

[dependencies]
cssparser = "0.31.0"
derive_more.version = "1.0.0"
derive_more.features = ["debug"]
itertools = "0.13.0"
selectors = "0.25.0"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.1"
tree-sitter-html = "0.23.0"
