[package]
name = "htmx-language-server"
description = "A language server for htmx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.1.25"

[dependencies]
cssparser = "0.31.0"
derive_more.features = ["debug"]
derive_more.version = "1.0.0"
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
phf = "0.11.2"
selectors = "0.25.0"
serde_json = "1.0.131"
streaming-iterator = "0.1.9"
string_cache = "0.8.7"
thiserror = "1.0.65"
tree-sitter = "0.24.1"
tree-sitter-html = "0.23.0"
