[package]
name = "htmx-language-server"
description = "A language server for htmx"
version = "0.1.0"
edition = "2021"

[build-dependencies]
cc = "1.1.25"

[dependencies]
env_logger = "0.11.5"
itertools = "0.13.0"
log = "0.4.22"
lsp-server = "0.7.7"
lsp-types = "0.97.0"
phf.features = ["macros"]
phf.version = "0.11.2"
self_cell = "1.1.0"
serde_json = "1.0.131"
string_cache = "0.8.7"
thiserror = "1.0.65"
tl = "0.7.8"
